[package]
name = "termcolor2rgb"
version = "1.0.1"
authors = ["rhysd <https://rhysd.github.io>"]
edition = "2018"
description = "Small crate to convert termcolor::Color to RGB value"
repository = "https://github.com/rhysd/termcolor2rgb"
readme = "README.md"
license-file = "LICENSE.txt"

[badges]
travis-ci = { repository = "rhysd/termcolor2rgb" }
maintenance = { status = "passively-maintained" }

[package.metadata.release]
no-dev-version = true

[dependencies]
termcolor = "1.0"
